手续费修复

--- a/docs/TODO/接口对接要关注的点.md
+++ b/docs/TODO/接口对接要关注的点.md
@@ -3,7 +3,8 @@
 ## 协议维度
 
 1. 协议生效注意点：协议生效条件（目前接口只做了协议到期校验，需求5.2.4：协议维度）
-2. 需要关注的数据库对应的字段有哪些：
+2. 
+3. 需要关注的数据库对应的字段有哪些：
     - agreement
       - ？？？
   
@@ -15,3 +16,4 @@
 ## 手续费
 
 1. 需求的5.2.4的手续费维度的第6点：创建副渠道时是否一定要与主渠道有交集？
+2. 是不是产品，商品，计划都有手续费配置那么一说，如果有，那么在他们各自校验手续费配置正确与否是使用的同一个上限吗
