--- a/docs/TODO/接口对接要关注的点.md
+++ b/docs/TODO/接口对接要关注的点.md
@@ -12,8 +12,10 @@
 ## BD
 
 1. BD是否对应user表，如果是BD的状态怎么取（离职，等）
+2. BD是否与机构是一对多的关系（接口返回的comCode是List），另BD是不是一定要关联机构，没有关联的是否可以出单（接口查询时没有comCode信息，或者说对应机构没有配置comCode，如果这个情况又怎么说）
 
 ## 手续费
 
 1. 需求的5.2.4的手续费维度的第6点：创建副渠道时是否一定要与主渠道有交集？
 2. 是不是产品，商品，计划都有手续费配置那么一说，如果有，那么在他们各自校验手续费配置正确与否是使用的同一个上限吗
+
