--- a/docs/TODO/接口对接要关注的点.md
+++ b/docs/TODO/接口对接要关注的点.md
@@ -1,10 +1,18 @@
 # 接口对接需要注意的关键点
 
+## 中介查询协议接口备注
+
+1. 渠道对协议的对应关系依赖于产品，产品生效于一个补充协议，但是渠道对应的主协议只能有一个
+2. 映射到接口可以理解为：
+   1. 入参只有渠道时是个模糊查询可以得到多条协议信息，是否有效看到期时间
+   2. 入参有产品时就会精确查询关联协议
+
 ## 协议维度
 
 1. 协议生效注意点：协议生效条件（目前接口只做了协议到期校验，需求5.2.4：协议维度）
-2. 
-3. 需要关注的数据库对应的字段有哪些：
+   1. 渠道查询不用关注优先级，
+   2. 产品费用上限需要关注优先级
+2. 需要关注的数据库对应的字段有哪些：
     - agreement
       - ？？？
   
@@ -18,4 +26,3 @@
 
 1. 需求的5.2.4的手续费维度的第6点：创建副渠道时是否一定要与主渠道有交集？
 2. 是不是产品，商品，计划都有手续费配置那么一说，如果有，那么在他们各自校验手续费配置正确与否是使用的同一个上限吗
-
