--- a/docs/springcloud/服务降级.md
+++ b/docs/springcloud/服务降级.md
@@ -127,4 +127,98 @@ public interface PaymentConsumerService {
 ```
 
 ### 服务熔断：
+
+1. 开启服务熔断并配置
+
+> 服务熔断有一个断开重新打开机制：打开->半开->关闭断路器
+
+```
+    @GetMapping("/payment/circuit/{id}")
+    @HystrixCommand(fallbackMethod = "", commandProperties = {
+            @HystrixProperty(name = "circuitBreaker.enabled",value = "true" ),
+            @HystrixProperty(name = "circuitBreaker.requestVolumeThreshold",value = "10"), //窗口内错误次数，超过10次就熔断
+            @HystrixProperty(name = "circuitBreaker.sleepWindowInMilliseconds",value = "10000"), //窗口时间10秒
+            @HystrixProperty(name = "circuitBreaker.errorThresholdPercentage",value = "60" ), //错误率，超过60%就熔断
+    })
+    public CommonResult<Payment> getCircuitPaymentById(@PathVariable("id") Long id) {
+        Payment payment = paymentRepository.findById(id).orElse( null);
+        if (payment == null) {
+            throw new RuntimeException("查询不到");
+        }
+        return new CommonResult<Payment>().ofSuccess(payment);
+    }
+
+    public CommonResult<Payment> getCircuitPaymentById_error(@PathVariable("id") Long id) {
+
+        return new CommonResult<Payment>().ofFail(null,5000,"服务繁忙，暂时不可用/(ㄒoㄒ)/~~");
+    }
+```
 ### 服务限流:
+
+### Hystrix控制台(有请求时页面上才会有显示)
+
+- 创建控制台程序
+  1. pom
+
+```
+   <dependencies>
+        <!--hystrix dashboard-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-hystrix-dashboard</artifactId>
+        </dependency>
+    </dependencies>
+```
+
+  2. 开启
+
+```
+@SpringBootApplication
+@EnableHystrixDashboard  //开启Hystrixkongzhitai
+public class HystrixConsole9001 {
+    public static void main(String[] args) {
+        SpringApplication.run(HystrixConsole9001.class,args);
+    }
+}
+```
+
+- 被监控端配置
+  1. pom
+
+```
+        <!--监控-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+```
+
+  2. 配置URL
+
+```
+@SpringBootApplication
+@EnableEurekaClient
+@EnableHystrix
+public class HystrixProviderPayment8001 {
+    public static void main(String[] args) {
+        SpringApplication.run(HystrixProviderPayment8001.class,args);
+    }
+
+    /**
+     * 此配置是为了服务监控而配置，与服务容错本身无观，springCloud 升级之后的坑
+     * ServletRegistrationBean因为springboot的默认路径不是/hystrix.stream
+     * 只要在自己的项目中配置上下面的servlet即可
+     * @return
+     */
+    @Bean
+    public ServletRegistrationBean getServlet(){
+        HystrixMetricsStreamServlet streamServlet = new HystrixMetricsStreamServlet();
+        ServletRegistrationBean<HystrixMetricsStreamServlet> registrationBean = new ServletRegistrationBean<>(streamServlet);
+        registrationBean.setLoadOnStartup(1);
+        registrationBean.addUrlMappings("/hystrix.stream");
+        registrationBean.setName("HystrixMetricsStreamServlet");
+        return registrationBean;
+    }
+}
+```
+
