--- a/docs/springcloud/网关.md
+++ b/docs/springcloud/网关.md
@@ -3,7 +3,28 @@
 ### 框架：
 
 - zuul:阻塞式网络IO
+- zuul2：还未开发出来
 - spring cloud gateway：非阻塞式IO（webflex ）
   - 路由
   - 断言
   - 过滤
+
+## Spring Cloud Gateway
+
+1. pom
+2. 主启动
+3. yml
+   1. 路由
+      1. 静态路由
+      2. 动态路由
+   2. 断言，[官方文档](https://cloud.spring.io/spring-cloud-static/spring-cloud-gateway/2.2.0.RELEASE/reference/html/#gateway-request-predicates-factories)
+      1. after
+      2. before
+      3. between
+      4. path
+      5. 更多看文档...
+   3. 过滤器
+      1. GateWay Filter
+      2. Global Filter
+      3. 自定义过滤器
+
