--- a/docs/springcloud/配置中心.md
+++ b/docs/springcloud/配置中心.md
@@ -1,7 +1,165 @@
 # 配置中心
 
-## 框架
+### 框架
 
 1. spring cloud config ： 通过git维护配置文件不好用
 2. appollo
 3. nacos
+
+## spring cloud config 集成
+
+### server
+1. pom
+   ```xml
+     <!-- spring cloud config 服务端包 -->
+     <dependency>
+         <groupId>org.springframework.cloud</groupId>
+         <artifactId>spring-cloud-config-server</artifactId>
+     </dependency>
+     <dependency>
+         <groupId>org.springframework.boot</groupId>
+         <artifactId>spring-boot-starter-web</artifactId>
+     </dependency>
+
+     <dependency>
+         <groupId>org.springframework.boot</groupId>
+         <artifactId>spring-boot-starter-actuator</artifactId>
+     </dependency>
+   ```
+2. yml
+
+    ```yml
+   server:
+     port: 3344
+
+   spring:
+     application:
+       name: cloud-config-server
+     cloud:
+       config:
+         server:
+           git:
+             uri: https://github.com/ChaunceyXCX/spring-cloud-config #配置文件所在仓库
+             username: xxx 登录账号
+             password: xxxx 登录密码
+             default-label: master #配置文件分支
+             search-paths: spring-cloud-config  #配置文件所在根目录
+    ```
+3. 主启动类
+
+    ```java
+      @SpringBootApplication
+      @EnableConfigServer
+      public class ConfigServer {
+          public static void main(String[] args) {
+              SpringApplication.run(ConfigServer.class,args);
+          }
+      }
+    ```
+4. git,创建配置文件
+    ``` yml
+    # 配置文件以应用名，版本命名：${application.name}-${profiles.active}.yml
+
+    # 例：cloud-config-client-dev.yml
+    data:
+     profile: xixix
+
+    ```
+5. 查看配置文件信息：
+    ```
+    http://localhost:3301/cloud-config-server-dev.yml
+    ```
+
+### client
+1. pom
+
+    ```xml
+    <!-- spring cloud config 客户端包 -->
+     <dependency>
+         <groupId>org.springframework.cloud</groupId>
+         <artifactId>spring-cloud-starter-config</artifactId>
+     </dependency>
+
+     <dependency>
+         <groupId>org.springframework.boot</groupId>
+         <artifactId>spring-boot-starter-web</artifactId>
+     </dependency>
+
+     <dependency>
+         <groupId>org.springframework.boot</groupId>
+         <artifactId>spring-boot-starter-actuator</artifactId>
+     </dependency>
+    ```
+2. yml(要配置在bootstrap.yml)
+   
+   ```yml
+   spring:
+     application:
+       name: cloud-config-client
+
+     profiles:
+       active: dev
+    ---
+    spring:
+     cloud:
+       config:
+         uri: http://127.0.0.1:3344
+         label: master
+         profile: dev
+   ```
+3. 获取配置（启动时获取）
+
+    ```java
+    @Value("${data.profile}")
+    private String profile;
+    ```
+4. 动态获取配置(actuator)
+   1. pom(引入actuator包)
+
+        ```xml
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+        ```
+   2. yml（配置actuator）
+
+        ```yml
+        management:
+           endpoint:
+             shutdown:
+               enabled: false
+           endpoints:
+             web:
+               exposure:
+                 include: "*"
+        ```
+   3. 开启配置刷新
+       ```java
+         @RestController
+         @RequestMapping("/config/test")
+         @Slf4j
+         @RefreshScope //开启配置文件刷新
+         public class ConfigTest {
+
+             @Autowired
+             private GitConfig gitConfig;
+
+             @Value("${data.profile}")
+             private String profile;
+
+             @GetMapping("/get/profile")
+             public CommonResult<String> getProfile() {
+                 log.info(gitConfig.getProfile());
+                 log.info(profile);
+                 return new CommonResult<String>().ofSuccess(profile);
+             }
+         }
+       ```
+   4. 触发配置刷新
+        ```
+        //post请求客户端刷新
+        http://localhost:3345/actuator/refresh
+        ```
+    
+5. 分布式多实例动态更新配置（需要总线Bus支持，见总线章）
