多配置中心

--- a/docs/springcloud/配置中心.md
+++ b/docs/springcloud/配置中心.md
@@ -107,13 +107,27 @@
          label: master
          profile: dev
    ```
-3. 获取配置（启动时获取）
+3. 集成Eureka配置多配置中心实现高可用
+
+   ```yml
+   spring:
+     cloud:
+       config:
+   #      uri: http://127.0.0.1:3344
+         label: master
+         profile: dev
+         discovery:
+           enabled: true
+           service-id: CLOUD-CONFIG-SERVER
+   ```
+
+4. 获取配置（启动时获取）
 
     ```java
     @Value("${data.profile}")
     private String profile;
     ```
-4. 动态获取配置(actuator)
+5. 动态获取配置(actuator)
    1. pom(引入actuator包)
 
         ```xml
@@ -162,4 +176,4 @@
         http://localhost:3345/actuator/refresh
         ```
     
-5. 分布式多实例动态更新配置（需要总线Bus支持，见总线章）
+6. 分布式多实例动态更新配置（需要总线Bus支持，见总线章）
