--- a/docs/springcloud/总线.md
+++ b/docs/springcloud/总线.md
@@ -2,7 +2,43 @@
 
 ## 框架
 
-1. spring cloud Bus ： 支持两种消息代理：ribbitmq 和 kafka
+1. spring cloud Bus ： 支持两种消息代理：ribbitmq 和 kafka，默认主题：springCloudBus
 2. nacos
 
-## Bud集成
+## Bus集成（前提有部署ribbitmq）
+
+1. pom
+
+    ```xml
+      <dependency>
+         <groupId>org.springframework.cloud</groupId>
+         <artifactId>spring-cloud-starter-bus-amqp</artifactId>
+      </dependency>
+    ```
+2. yml
+
+    ```yml
+    management:
+      endpoint:
+       shutdown:
+         enabled: false
+      endpoints:
+       web:
+         exposure:
+           include: "*"
+    rabbitmq:
+       host: localhost
+       port: 5672
+       username: guest
+       password: guest
+    ```
+3. 更新（更新一个会触发所有更新，一般在server端更新）
+
+    ```
+    //全局更新
+    http://localhost:3344/actuator/bus-refresh
+    //指定更新某个实例
+    http://localhost:3344/actuator/bus-refresh/${application.name}:${server.port}
+    //例：
+    http://localhost:3344/actuator/bus-refresh/cloud-config-client:3345
+    ```
