--- a/docs/springcloud/消息驱动.md
+++ b/docs/springcloud/消息驱动.md
@@ -2,5 +2,167 @@
 
 ### 框架
 
-## Stream 集成
+## Stream 集成(ribbitmq)
+
+1. pom
+   ```xml
+   <!--ribbit binder-->
+     <dependency>
+         <groupId>org.springframework.cloud</groupId>
+         <artifactId>spring-cloud-starter-stream-rabbit</artifactId>
+     </dependency>
+   ```
+2. 生产者
+   1. yml
+   ```yml
+   spring:
+     application:
+       name: cloud-stream-provider
+     cloud:
+       stream:
+         bindings: #服务整合处理
+           output: #通道名称（此为默认通道名称可以自定义，详见4小节）
+             destination: studyExchange #topic/exchange
+             content-type: application/json #消息文本类型
+             binder: defaultRabbit # 要绑定的消息服务具体设置
+         binders: #此处定义要绑定的MQ服务信息（ribbitMq，kafka）
+           defaultRabbit: # 表示自定义的binder名称
+             type: rabbit # 指定创建的为RibbitMq的binder
+             environment:
+               spring:
+                 rabbitmq:
+                   host: localhost
+                   port: 5672
+                   username: guest
+   ```
+   2. code 
+   ```java
+   @EnableBinding(Source.class)
+   @Slf4j
+   public class MessageProviderImpl implements IMessageProvider {
+
+       @Resource
+       private MessageChannel output; //此output = Source.OUTPUT = stream.bindings.output(三者名称一致)
+
+       @Override
+       public String send(int i) {
+
+           String uuid = IdUtil.simpleUUID();
+           output.send(MessageBuilder.withPayload(i+"=====>>>"+uuid).build());
+           log.info(i+"=====>>>"+uuid);
+           return uuid;
+       }
+   }
+   ```
+3. 消费者
+   1. yml
+   ```yml
+   spring:
+     application:
+       name: cloud-stream-consumer
+     cloud:
+       stream:
+         bindings: #服务整合处理
+           input: #通道名称
+             destination: studyExchange #topic/exchange
+             content-type: application/json #消息类型
+             group: consumer
+             binder: defaultRabbit # 要绑定的消息服务具体设置
+         binders: #此处定义要绑定的MQ服务信息（ribbitMq，kafka）
+           defaultRabbit: # 表示自定义的binder名称
+             type: rabbit
+             environment:
+               spring:
+                 rabbitmq:
+                   host: localhost
+                   port: 5672
+                   username: guest
+                   password: guest
+   ```
+   2. code
+   ```java
+   @EnableBinding(Sink.class)
+   @Slf4j
+   public class Consumer {
+
+       @StreamListener(Sink.INPUT) //此INPUT属性值为"input"与“output”一样同为配置文件中的默认通道名
+       public void receive(Message<String> message) {
+           log.info(message.getPayload());
+       }
+   }
+   ```
+4. 自定义（如：消费的同时生产）
+   1. yml
+   ```yml
+   spring:
+     application:
+       name: cloud-stream-consumer
+     cloud:
+       stream:
+         bindings: #服务整合处理
+           myOutput1: #通道名称
+             destination: myOutput1 #topic/exchange
+             content-type: application/json #消息类型
+             group: consumer1
+   #          exchangeType：fanout
+             binder: defaultRabbit # 要绑定的消息服务具体设置
+           myOutput2: #通道名称
+             destination: myOutput2 #topic/exchange
+             content-type: application/json #消息类型
+             group: consumer2
+   #          exchangeType：fanout
+             binder: defaultRabbit # 要绑定的消息服务具体设置
+           myInput: #通道名称
+             destination: studyExchange #topic/exchange
+             content-type: application/json #消息类型
+             group: consumer
+   #          exchangeType：fanout
+             binder: defaultRabbit # 要绑定的消息服务具体设置
+         binders: #此处定义要绑定的MQ服务信息（ribbitMq，kafka）
+           defaultRabbit: # 表示自定义的binder名称
+             type: rabbit
+             environment:
+               spring:
+                 rabbitmq:
+                   host: localhost
+                   port: 5672
+                   username: guest
+                   password: guest
+   ```
+   2. code
+   ```java
+   public interface CustomBinder {
+
+       @Output("myOutput1")
+       MessageChannel myOutput1();
+
+       @Output("myOutput2")
+       MessageChannel myOutput2();
+
+       @Input("myInput")
+       SubscribableChannel input();
+   }
+
+   
+   @EnableBinding(CustomBinder.class)
+   @Slf4j
+   public class Consumer {
+
+       @Autowired
+       private MessageChannel myOutput1;
+
+       @Autowired
+       private MessageChannel myOutput2;
+
+
+       @StreamListener("myInput")
+       public void receive(Message<String> messages) {
+           log.info("收到消息：8802:{}",messages.getPayload());
+           myOutput1.send(messages);
+           log.info("发送消息1：{}",messages.getPayload());
+           myOutput2.send(messages);
+           log.info("发送消息2：{}",messages.getPayload());
+       }
+   }
+   ```
 
