--- a/docs/springcloud/链路监控.md
+++ b/docs/springcloud/链路监控.md
@@ -1,5 +1,38 @@
 # 链路监控
 
 ### 框架
+- spring cloud sleuth+zipkin
 
-## 集成
+## 集成(默认web模式)
+### client（分别创建两个客户端实现http层级调用）
+1. pom
+   ```xml
+   <!--zipkin-->
+     <dependency>
+         <groupId>org.springframework.cloud</groupId>
+         <artifactId>spring-cloud-sleuth-zipkin</artifactId>
+     </dependency>
+     <!--sleuth-->
+     <dependency>
+         <groupId>org.springframework.cloud</groupId>
+         <artifactId>spring-cloud-starter-sleuth</artifactId>
+     </dependency>
+   ```
+2. yml
+   ```yml
+   spring:
+     application:
+       name: cloud-provider-payment
+     zipkin:
+       base-url: http://127.0.0.1:9411 #zipkin server 地址
+       sender:
+         type: web # 默认为web可以不用配置
+     sleuth:
+       sampler:
+         probability: 1.0 # 采样率100%
+   ```
+3. http请求代码省略
+
+### server
+
+1. 官网下载JAR包：[zipkin-server-2.12.9-exec.jar](https://dl.bintray.com/openzipkin/maven/io/zipkin/java/zipkin-server)直接运行即可，默认端口9411
