--- a/docs/java/jvm/体系架构.md
+++ b/docs/java/jvm/体系架构.md
@@ -2,8 +2,11 @@
 
 ### 架构图
 
+#### **顺序**
+
 > ``类加载器``->``运行数据区``->``执行引擎``->本地接口->本地方法库 
 
+#### **架构图**
 ![](../../java/jvm/res/2021-03-11-10-33-49.png)
 
 
